# jcu-daemon

./: CMakeLists.txt  LICENSE
include/jcu-daemon/: daemon.h  installer.h
src/: daemon-impl.cc  daemon-impl.h  daemon.cc  installer.cc  platform-daemon.h  platform-installer.h
src/linux/: linux_daemon.cc  linux_daemon.h
src/windows/: service-base.cpp  service-base.h  service_base.cpp  windows-daemon.cc  windows-daemon.h  windows-installer.cc  windows-installer.h
